# human-diary

agents/human_diary_pipeline/: .env.example  README.md  pyproject.toml
agents/human_diary_pipeline/src/human_diary_pipeline/: __init__.py  cli.py  config.py
agents/human_diary_pipeline/src/human_diary_pipeline/adapters/: __init__.py  base.py  newsapi.py  openai_web.py  perplexity.py  registry.py  semantic_scholar.py  serpapi.py
agents/human_diary_pipeline/src/human_diary_pipeline/agents/: llm.py  planner.py  publish.py  retrieval.py  sensemaking.py  writing.py
agents/human_diary_pipeline/src/human_diary_pipeline/pipelines/: newsroom.py
agents/human_diary_pipeline/src/human_diary_pipeline/utils/: provenance.py
nextjs-frontend/: CLAUDE.md  package-lock.json  package.json
nextjs-frontend/src/app/: globals.css  layout.tsx  page.tsx
nextjs-frontend/src/app/[date]/: page.tsx
nextjs-frontend/src/app/components/ui-kit/: avatar.tsx  link.tsx  navbar.tsx  sidebar.tsx
nextjs-frontend/src/app/past/: page.tsx
nextjs-frontend/src/app/today/: page.tsx
nextjs-frontend/src/app/what/: page.tsx
nextjs-frontend/src/data/: diaryEntries.json  diaryEntries.ts
